add jvm arg to ensure compatibility with Java 16
Kryo needs acces sto sun.nio.ch.DirectBuffer, which is forbidden by
default in Java 16 and up.

Signed-off-by: Jakob Wenzel <jakobw@xilinx.com>